# shAI-l

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
prompts/: choosing-from-docs.txt  ret.txt  scanning-single-doc.txt
shAI_ostap4ello/: requirements.txt
shAI_ostap4ello/prompts/: classify-1.txt  classify-2.txt  classify.txt
shAI_ostap4ello/src/: __main__.py
shAI_ostap4ello/src/config/: __init__.py  config.py
shAI_ostap4ello/src/db/: __init__.py  __main__.py  db.py
shAI_ostap4ello/src/interpreter/: __init__.py  __main__.py  interpreter.py
shAI_ostap4ello/src/llm/: __init__.py  __main__.py  llm.py
shAI_ostap4ello/src/rag/: __init__.py  __main__.py  classifier.py  rag.py
shAI_ostap4ello/src/utils/: __init__.py  __main__.py  adapter.py  compile-groff.sh  fetch_man.py  prompt.py
src/: __main__.py  rag.py
src/db/: __init__.py  __main__.py  retrieval.py
src/db/utils/: faiss_utils.py
src/db_retrieve/: __main__.py  retrieval.py
src/db_retrieve/utils/: embedding.py  utils.py
src/ext_utils/: __init__.py  __main__.py  adapter.py  compile-groff.sh  ollama-docker.sh
src/llm/: __init__.py  __main__.py  embedding.py  llm.py
src/rag/: __init__.py  __main__.py  rag.py
src/rag/utils/: prompt.py
src/utils/: __main__.py  compile-groff.sh  fetch_man.py  prompt.py
test/: README.md  config.conf  test.py
test/cfg/: test_config_0.conf  test_config_1.conf  test_config_2.conf  test_config_3.conf
test/tests/: test1.py  test2.py  test3.py
test/tests/cfg/: shai_def_config_0.conf  shai_def_config_1.conf  shai_def_config_2.conf  (+6 more)
(+72 files in other folders)
